--- a/templates/show_user/index.html.twig
+++ b/templates/show_user/index.html.twig
@@ -1,55 +1,73 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="container">
-        <h1 class="mt-4">{{ 'admin_panel.title' | trans }}</h1>
+	<div class="container mt-5">
+		{% for message in app.flashes('success') %}
+			<div class="alert alert-success alert-dismissible fade show mt-4" role="alert">
+				{{ message }}
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		{% endfor %}
 
-        {% for message in app.flashes('success') %}
-            <div class="alert alert-success mt-4">
-                {{ message }}
-            </div>
-        {% endfor %}
+		{% for message in app.flashes('error') %}
+			<div class="alert alert-danger alert-dismissible fade show mt-4" role="alert">
+				{{ message }}
+				<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+		{% endfor %}
 
-        {% for message in app.flashes('error') %}
-            <div class="alert alert-danger mt-4">
-                {{ message }}
-            </div>
-        {% endfor %}
+		<h1 class="text-center text-primary mb-4">{{ 'admin_panel.title' | trans }}</h1>
 
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th>{{ 'admin_panel.id' | trans }}</th>
-                    <th>{{ 'admin_panel.email' | trans }}</th>
-                    <th>{{ 'admin_panel.first_name' | trans }}</th>
-                    <th>{{ 'admin_panel.last_name' | trans }}</th>
-                    <th>{{ 'admin_panel.roles' | trans }}</th> 
-                    <th>{{ 'admin_panel.actions' | trans }}</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for user in pagination %}
-                    <tr>
-                        <td>{{ user.id }}</td>
-                        <td>{{ user.email }}</td>
-                        <td>{{ user.firstname }}</td>
-                        <td>{{ user.lastname }}</td>
-                        <td>{{ user.roles|join(', ') }}</td> 
+		<div class="card shadow-sm rounded">
+			<div class="card-body">
+				<table class="table table-hover table-bordered table-striped">
+					<thead class="thead-light">
+						<tr>
+							<th>{{ 'admin_panel.id' | trans }}</th>
+							<th>{{ 'admin_panel.email' | trans }}</th>
+							<th>{{ 'admin_panel.first_name' | trans }}</th>
+							<th>{{ 'admin_panel.last_name' | trans }}</th>
+							<th>{{ 'admin_panel.roles' | trans }}</th>
+							<th>{{ 'admin_panel.actions' | trans }}</th>
+						</tr>
+					</thead>
+					<tbody>
+						{% for user in pagination %}
+							<tr>
+								<td>{{ user.id }}</td>
+								<td>{{ user.email }}</td>
+								<td>{{ user.firstname }}</td>
+								<td>{{ user.lastname }}</td>
+								<td>{{ user.roles|join(', ') }}</td>
+								<td>
+									<a href="{{ path('app_user_edit', { id: user.id }) }}" class="btn btn-warning btn-sm">{{ 'admin_panel.edit' | trans }}</a>
+								</td>
+							</tr>
+						{% else %}
+							<tr>
+								<td colspan="6" class="text-center">{{ 'admin_panel.no_users_found' | trans }}</td>
+							</tr>
+						{% endfor %}
+					</tbody>
+				</table>
+			</div>
+		</div>
 
-                        <td>
-                            <a href="{{ path('app_user_edit', { id: user.id }) }}" class="btn btn-warning btn-sm">{{ 'admin_panel.edit' | trans }}</a>
-                        </td>
-                    </tr>
-                {% else %}
-                    <tr>
-                        <td colspan="6" class="text-center">{{ 'admin_panel.no_users_found' | trans }}</td> 
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+		<div class="mt-4 d-flex justify-content-center">
+			{{ knp_pagination_render(pagination) }}
+		</div>
+	</div>
 
-        <div class="mt-3">
-            {{ knp_pagination_render(pagination) }}
-        </div>
-    </div>
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+	<script>
+		$(document).ready(function () {
+$('.alert .close').on('click', function () {
+$(this).closest('.alert').alert('close');
+});
+});
+	</script>
 {% endblock %}
